Update bootstrap submodule and fix header icons to work with modern pandoc

--- a/panstrap.less
+++ b/panstrap.less
@@ -71,56 +71,57 @@ section.level6 { .make-md-column(3) }
 }
 
 
-a[href$='#torei'] { 
+#torei > *:first-child, [href$='#torei'] { 
     background: url('ziggurat.svg') center left no-repeat;
     padding-left: 1.2em;
 }
-a[href$='#the-star'] { .image-link('orbital'); }
-a[href$='#the-space-elevator'] { .image-link('lift'); }
-a[href$='#the-ringdoms'] { .image-link('spiked-collar'); }
-a[href$='#the-antipodes'] { .image-link('wheat'); }
-a[href$='#the-ministries'] { .image-link('capitol'); }
-a[href$='#ministry-of-truants'] { .image-link('handcuffs'); }
-a[href$='#ministry-of-improvements'] { .image-link('doctor-face'); }
-a[href$='#ministry-of-wombs'] { .image-link('tied-scroll'); }
-a[href$='#the-badlands'] { .image-link('earth-spit'); }
-a[href$='#the-ziggurats'] { .image-link('artificial-hive'); }
+#the-star > *:first-child, [href$='#the-star'] { .image-link('orbital') }
+#the-space-elevator > *:first-child, [href$='#the-space-elevator'] { .image-link('lift'); }
+#the-ringdoms > *:first-child, [href$='#the-ringdoms'] { .image-link('spiked-collar'); }
+#the-antipodes > *:first-child, [href$='#the-antipodes'] { .image-link('wheat'); }
+#the-ministries > *:first-child, [href$='#the-ministries'] { .image-link('capitol'); }
+#ministry-of-truants > *:first-child, [href$='#ministry-of-truants'] { .image-link('handcuffs'); }
+#ministry-of-improvements > *:first-child, [href$='#ministry-of-improvements'] { .image-link('doctor-face'); }
+#ministry-of-wombs > *:first-child, [href$='#ministry-of-wombs'] { .image-link('tied-scroll'); }
+#the-badlands > *:first-child, [href$='#the-badlands'] { .image-link('earth-spit'); }
+#the-ziggurats > *:first-child, [href$='#the-ziggurats'] { .image-link('artificial-hive'); }
 
-a[href$='#character-creation'] { .image-link('drama-masks'); }
-a[href$='#background'] { .image-link('journey');}
-a[href$='#male-or-female'] { .image-link('duality');}
-a[href$='#why-did-you-leave'] { .image-link('rocket-flight');}
-a[href$='#where-are-you-from'] { .image-link('globe');}
-a[href$='#hierarchy'] { .image-link('minions');}
-a[href$='#stats'] { .image-link('suits');}
+#the-game > *:first-child, [href$='#the-game'] { .image-link('book-cover');}
+#character-creation > *:first-child, [href$='#character-creation'] { .image-link('drama-masks'); }
+#background > *:first-child, [href$='#background'] { .image-link('journey');}
+#male-or-female > *:first-child, [href$='#male-or-female'] { .image-link('duality');}
+#why-did-you-leave > *:first-child, [href$='#why-did-you-leave'] { .image-link('rocket-flight');}
+#where-are-you-from > *:first-child, [href$='#where-are-you-from'] { .image-link('globe');}
+#hierarchy > *:first-child, [href$='#hierarchy'] { .image-link('minions');}
+#stats > *:first-child, [href$='#stats'] { .image-link('suits');}
 p > a[href$='#acuity'] { .image-link('brainstorm');}
 p > a[href$='#body'] { .image-link('strong');}
 p > a[href$='#heart'] { .image-link('shining-heart');}
 p > a[href$='#will'] { .image-link('burning-passion');}
-a[href$='#traits'] { .image-link('poker-hand');}
-a[href$='#relationships'] { .image-link('telepathy');}
-a[href$='#allocate-your-dice'] { .image-link('checkbox-tree');}
-a[href$='#belongings'] { .image-link('knapsack');}
-a[href$='#torean-objects'] { .image-link('whip');}
-a[href$='#off-world-objects'] { .image-link('circuitry');}
-a[href$='#biotech'] { .image-link('biohazard');}
-a[href$='#starting-equipment'] { .image-link('belt-buckles');}
-a[href$='#guns-are-complicated'] { .image-link('bolter-gun');}
-a[href$='#initiation-to-torei'] { .image-link('slavery-whip');}
-a[href$='#example-character'] { .image-link('aura');}
+#traits > *:first-child, [href$='#traits'] { .image-link('poker-hand');}
+#relationships > *:first-child, [href$='#relationships'] { .image-link('telepathy');}
+#allocate-your-dice > *:first-child, [href$='#allocate-your-dice'] { .image-link('checkbox-tree');}
+#belongings > *:first-child, [href$='#belongings'] { .image-link('knapsack');}
+#torean-objects > *:first-child, [href$='#torean-objects'] { .image-link('whip');}
+#off-world-objects > *:first-child, [href$='#off-world-objects'] { .image-link('circuitry');}
+#biotech > *:first-child, [href$='#biotech'] { .image-link('biohazard');}
+#starting-equipment > *:first-child, [href$='#starting-equipment'] { .image-link('belt-buckles');}
+#guns-are-complicated > *:first-child, [href$='#guns-are-complicated'] { .image-link('bolter-gun');}
+#initiation-to-torei > *:first-child, [href$='#initiation-to-torei'] { .image-link('slavery-whip');}
+#example-character > *:first-child, [href$='#example-character'] { .image-link('aura');}
 
-a[href$='#conflict'] { .image-link('back-forth');}
-a[href$='#who-goes-first'] { .image-link('stopwatch');}
-a[href$='#who-wins'] { .image-link('life-in-the-balance');}
-a[href$='#roll-stats-and-relationships'], a[href$='#need-more-dice'], a[href$='#how-to-think-about-dice'] { .image-link('cubes');}
-a[href$='#challenge'] { .image-link('smoking-finger');}
-a[href$='#response'] { .image-link('checked-shield');}
-a[href$='#change-the-game'], a[href$='#how-to-think-about-changing-the-game'] { .image-link('magic-swirl');}
-a[href$='#traits-and-belongings'] { .image-link('cubeforce');}
-a[href$='#help'] { .image-link('all-for-one');}
-a[href$='#give-in'], a[href$='#giving-in-is-awesome'] { .image-link('prayer');}
+#conflict > *:first-child, [href$='#conflict'] { .image-link('back-forth');}
+#who-goes-first > *:first-child, [href$='#who-goes-first'] { .image-link('stopwatch');}
+#who-wins > *:first-child, [href$='#who-wins'] { .image-link('life-in-the-balance');}
+#roll-stats-and-relationships > *:first-child, [href$='#roll-stats-and-relationships'], a[href$='#need-more-dice'], a[href$='#how-to-think-about-dice'] { .image-link('cubes');}
+#challenge > *:first-child, [href$='#challenge'] { .image-link('smoking-finger');}
+#response > *:first-child, [href$='#response'] { .image-link('checked-shield');}
+#change-the-game > *:first-child, [href$='#change-the-game'], a[href$='#how-to-think-about-changing-the-game'] { .image-link('magic-swirl');}
+#traits-and-belongings > *:first-child, [href$='#traits-and-belongings'] { .image-link('cubeforce');}
+#help > *:first-child, [href$='#help'] { .image-link('all-for-one');}
+#give-in > *:first-child, [href$='#give-in'], a[href$='#giving-in-is-awesome'] { .image-link('prayer');}
 
-a[href$='#fallout'], a[href$='#fallout-dice'], a[href$='#how-to-think-about-fallout'] { .image-link('thunder-struck');}
+#fallout > *:first-child, [href$='#fallout'], a[href$='#fallout-dice'], a[href$='#how-to-think-about-fallout'] { .image-link('thunder-struck');}
 p > a[href$='#safe'] { .image-link('screaming'); }
 p > a[href$='#physical'] { .image-link('grab'); }
 p > a[href$='#violent'] { .image-link('dripping-knife'); }
@@ -128,19 +129,19 @@ p > a[href$='#perilous'] { .image-link('backstab'); }
 figcaption > a[href$='#reversing-the-blow'], p > a[href$='#reversing-the-blow'] { .image-link('shield-reflect'); }
 figcaption > a[href$='#blocking'], p > a[href$='#blocking'] { .image-link('arrows-shield'); }
 figcaption > a[href$='#taking-the-blow'], p > a[href$='#taking-the-blow'] { .image-link('broken-shield'); }
-a[href$='#short-term-harm'] { .image-link('cut-palm');}
-a[href$='#scar'] { .image-link('stitched-wound');}
-a[href$='#trauma'] { .image-link('internal-injury');}
-a[href$='#experience'] { .image-link('gift-of-knowledge');}
+#short-term-harm > *:first-child, [href$='#short-term-harm'] { .image-link('cut-palm');}
+#scar > *:first-child, [href$='#scar'] { .image-link('stitched-wound');}
+#trauma > *:first-child, [href$='#trauma'] { .image-link('internal-injury');}
+#experience > *:first-child, [href$='#experience'] { .image-link('gift-of-knowledge');}
 
-a[href$='#play-advice'] { .image-link('light-bulb');}
-a[href$='#gm-advice'] { .image-link('book-cover');}
-a[href$='#say-yes-or-roll-the-dice'] { .image-link('uncertainty');}
-a[href$='#build-situations-not-plots'] { .image-link('dark-squad');}
-a[href$='#share-the-setting'] { .image-link('fountain-pen');}
-a[href$='#keep-revealing'] { .image-link('magnifying-glass');}
-a[href$='#creating-npcs'] { .image-link('backup');}
-a[href$='#npc-crowds'] { .image-link('dozen');}
+#play-advice > *:first-child, [href$='#play-advice'] { .image-link('light-bulb');}
+#gm-advice > *:first-child, [href$='#gm-advice'] { .image-link('evil-book');}
+#say-yes-or-roll-the-dice > *:first-child, [href$='#say-yes-or-roll-the-dice'] { .image-link('uncertainty');}
+#build-situations-not-plots > *:first-child, [href$='#build-situations-not-plots'] { .image-link('dark-squad');}
+#share-the-setting > *:first-child, [href$='#share-the-setting'] { .image-link('fountain-pen');}
+#keep-revealing > *:first-child, [href$='#keep-revealing'] { .image-link('magnifying-glass');}
+#creating-npcs > *:first-child, [href$='#creating-npcs'] { .image-link('backup');}
+#npc-crowds > *:first-child, [href$='#npc-crowds'] { .image-link('dozen');}
 
 nav:extend(.nav all) {}
 table:extend(.table all, .table-striped all) {}
@@ -241,7 +242,7 @@ nav > ul > li > a:extend(.btn) { padding-left: 3em !important; margin-left: -10p
 @state-warning-border:           lighten(spin(@state-warning-bg, -10), 10%);
 @state-danger-border:           lighten(spin(@state-danger-bg, -10), 10%);
 
-strong, em, a:visited {
+strong, em, a:visited, h1, h2, h3, h4, h5, h6 {
     color: lighten(@brand-primary, 10%);
 }
 
