Lots of reformatting, and a bit of new text.

--- a/panstrap.less
+++ b/panstrap.less
@@ -83,6 +83,12 @@ section > *:nth-child(2) {
 
 svg { max-height: 100%; }
 
+#torei > *:first-child::before, [href$='#torei']::before { .image-link('eclipse') }
+#high-tech-and-traditional-bdsm-are-part-of-the-torean-way-of-life > *:first-child::before, [href$='#high-tech-and-traditional-bdsm-are-part-of-the-torean-way-of-life']::before { .image-link('manacles') }
+#the-three-ais-are-inscrutable-mad-gods-keeping-torei-a-backwater-while-trying-to-finish-its-biosphere > *:first-child::before, [href$='#the-three-ais-are-inscrutable-mad-gods-keeping-torei-a-backwater-while-trying-to-finish-its-biosphere']::before { .image-link('triple-lock') }
+#torei-is-hard-to-get-to-from-the-rest-of-the-cosmos > *:first-child::before, [href$='#torei-is-hard-to-get-to-from-the-rest-of-the-cosmos']::before { .image-link('black-hole-bolas') }
+#torean-biotech-can-do-some-amazing-things > *:first-child::before, [href$='#torean-biotech-can-do-some-amazing-things']::before { .image-link('techno-heart') }
+#earth-is-gone-and-forgotten > *:first-child::before, [href$='#earth-is-gone-and-forgotten']::before { .image-link('world') }
 #the-star > *:first-child::before, [href$='#the-star']::before { .image-link('orbital') }
 #the-space-elevator > *:first-child::before, [href$='#the-space-elevator']::before { .image-link('lift'); }
 #the-ringdoms > *:first-child::before, [href$='#the-ringdoms']::before { .image-link('zigzag-cage'); }
@@ -97,12 +103,17 @@ svg { max-height: 100%; }
 #the-game > *:first-child::before, [href$='#the-game']::before { .image-link('book-cover');}
 #character-creation > *:first-child::before, [href$='#character-creation']::before { .image-link('drama-masks'); }
 #background > *:first-child::before, [href$='#background']::before { .image-link('journey');}
+#well-rounded > *:first-child::before, [href$='#well-rounded']::before { .image-link('radial-balance');}
+#strong-history > *:first-child::before, [href$='#strong-history']::before { .image-link('book-aura');}
+#complicated-history > *:first-child::before, [href$='#complicated-history']::before { .image-link('burning-book');}
+#strong-connections > *:first-child::before, [href$='#strong-connections']::before { .image-link('backup');}
+#complicated-connections > *:first-child::before, [href$='#complicated-connections']::before { .image-link('two-shadows');}
 #male-or-female > *:first-child::before, [href$='#male-or-female']::before { .image-link('duality');}
 #why-did-you-leave > *:first-child::before, [href$='#why-did-you-leave']::before { .image-link('rocket-flight');}
 #where-are-you-from > *:first-child::before, [href$='#where-are-you-from']::before { .image-link('globe');}
 #hierarchy > *:first-child::before, [href$='#hierarchy']::before { .image-link('minions');}
 #stats > *:first-child::before, [href$='#stats']::before { .image-link('suits');}
-p > a[href$='#acuity']::before { .image-link('brainstorm');}
+p > a[href$='#acuity']::before { .image-link('frontal-lobe');}
 p > a[href$='#body']::before { .image-link('strong');}
 p > a[href$='#heart']::before { .image-link('shining-heart');}
 p > a[href$='#will']::before { .image-link('burning-passion');}
@@ -121,15 +132,15 @@ p > a[href$='#will']::before { .image-link('burning-passion');}
 #conflict > *:first-child::before, [href$='#conflict']::before { .image-link('back-forth');}
 #who-goes-first > *:first-child::before, [href$='#who-goes-first']::before { .image-link('stopwatch');}
 #who-wins > *:first-child::before, [href$='#who-wins']::before { .image-link('life-in-the-balance');}
-#roll-stats-and-relationships > *:first-child::before, [href$='#roll-stats-and-relationships']::before, a[href$='#need-more-dice']::before, a[href$='#how-to-think-about-dice']::before { .image-link('cubes');}
+#roll-stats-and-relationships > *:first-child::before, #need-more-dice > *:first-child::before, #how-to-think-about-dice > *:first-child::before, [href$='#roll-stats-and-relationships']::before, a[href$='#need-more-dice']::before, a[href$='#how-to-think-about-dice']::before { .image-link('cubes');}
 #challenge > *:first-child::before, [href$='#challenge']::before { .image-link('smoking-finger');}
 #response > *:first-child::before, [href$='#response']::before { .image-link('checked-shield');}
-#change-the-game > *:first-child::before, [href$='#change-the-game']::before, a[href$='#how-to-think-about-changing-the-game']::before { .image-link('magic-swirl');}
+#change-the-game > *:first-child::before, #how-to-think-about-changing-the-game > *:first-child::before, [href$='#change-the-game']::before, a[href$='#how-to-think-about-changing-the-game']::before { .image-link('magic-swirl');}
 #traits-and-belongings > *:first-child::before, [href$='#traits-and-belongings']::before { .image-link('cubeforce');}
 #help > *:first-child::before, [href$='#help']::before { .image-link('all-for-one');}
-#give-in > *:first-child::before, [href$='#give-in']::before, a[href$='#giving-in-is-awesome']::before { .image-link('prayer');}
+#give-in > *:first-child::before, #giving-in-is-awesome > *:first-child::before, [href$='#give-in']::before, a[href$='#giving-in-is-awesome']::before { .image-link('prayer');}
 
-#fallout > *:first-child::before, [href$='#fallout']::before, a[href$='#fallout-dice']::before, a[href$='#how-to-think-about-fallout']::before { .image-link('thunder-struck');}
+#fallout > *:first-child::before, #fallout-dice > *:first-child::before, #how-to-think-about-fallout > *:first-child::before, [href$='#fallout']::before, a[href$='#fallout-dice']::before, a[href$='#how-to-think-about-fallout']::before { .image-link('thunder-struck');}
 p > a[href$='#safe']::before { .image-link('screaming'); }
 p > a[href$='#physical']::before { .image-link('grab'); }
 p > a[href$='#violent']::before { .image-link('dripping-knife'); }
@@ -146,16 +157,17 @@ figcaption > a[href$='#taking-the-blow']::before, p > a[href$='#taking-the-blow'
 #play-advice > *:first-child::before, [href$='#play-advice']::before { .image-link('light-bulb');}
 #gm-advice > *:first-child::before, [href$='#gm-advice']::before { .image-link('evil-book');}
 #say-yes-or-roll-the-dice > *:first-child::before, [href$='#say-yes-or-roll-the-dice']::before { .image-link('uncertainty');}
-#build-situations-not-plots > *:first-child::before, [href$='#build-situations-not-plots']::before { .image-link('dark-squad');}
+#build-situations-not-plots > *:first-child::before, [href$='#build-situations-not-plots']::before { .image-link('jigsaw-piece');}
 #share-the-setting > *:first-child::before, [href$='#share-the-setting']::before { .image-link('fountain-pen');}
 #keep-revealing > *:first-child::before, [href$='#keep-revealing']::before { .image-link('magnifying-glass');}
-#creating-npcs > *:first-child::before, [href$='#creating-npcs']::before { .image-link('backup');}
+#creating-situations > *:first-child::before, [href$='#creating-situations']::before { .image-link('jigsaw-box');}
+#creating-npcs > *:first-child::before, [href$='#creating-npcs']::before { .image-link('puppet');}
 #npc-crowds > *:first-child::before, [href$='#npc-crowds']::before { .image-link('dozen');}
 
 nav:extend(.nav all) {}
 table:extend(.table all, .table-striped all) {}
 header:extend(.jumbotron all) {
-    background-image:url('ziggurat.svg');
+    //background-image:url('ziggurat.svg');
     background-color: black;
     background-height: 100%;
     background-repeat:no-repeat;
